; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_newlibc.c___libc_wrapup.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_newlibc.c___libc_wrapup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_REENT = common dso_local global i32* null, align 8
@libc_globl_reent = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__libc_wrapup() #0 {
  %1 = call i32 (...) @__sys_state_get()
  %2 = call i32 @__sys_state_up(i32 %1)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %10

5:                                                ; preds = %0
  %6 = load i32*, i32** @_REENT, align 8
  %7 = icmp ne i32* %6, @libc_globl_reent
  br i1 %7, label %8, label %10

8:                                                ; preds = %5
  %9 = call i32 @_wrapup_reent(i32* @libc_globl_reent)
  store i32* @libc_globl_reent, i32** @_REENT, align 8
  br label %10

10:                                               ; preds = %4, %8, %5
  ret void
}

declare dso_local i32 @__sys_state_up(i32) #1

declare dso_local i32 @__sys_state_get(...) #1

declare dso_local i32 @_wrapup_reent(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
